# resilops-agent

./: .gitignore  .pre-commit-config.yaml  DISTRIBUTION.md  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yaml  pyproject.toml
.github/workflows/: release-chart.yml  release.yaml  test.yaml
charts/local/: .sops.yaml  secrets.enc.yaml
charts/local/agent/: values.yaml
charts/local/control-plane/: values.yaml
docker/: Agent  AgentDockerfile  Mockserver  agent.Dockerfile  nginx-example.Dockerfile
examples/: http-echo.yaml  nginx-hpa.yaml
examples/endpoint_drain/: scenario.json
examples/pod_kill/: REAME.md  scenario.json
examples/pod_recovery/: scenario.json
examples/pod_scaling/: README.md  scenario.json
examples/rolling_restart/: scenario.json
examples/scenarios/pod_eviction/: scenario.json
examples/scenarios/pod_recovery/: scenario.json
examples/scenarios/rolling_restart/: scenario.json
helm/: local.yaml  stg.yaml
helm/agent/: Chart.yaml  common.yaml  fluentbit.yaml  values.yaml
helm/agent/local/: secrets.enc.yaml  values.yaml
helm/agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  fileconfigmap.yaml  hpa.yaml  ingress.yaml  migration-job.yaml  rbac-cluster-binding.yaml  rbac-cluster-role.yaml  rbac-current-binding.yaml  rbac-current-role.yaml  rbac-namespaced-binding.yaml  rbac-namespaced-role.yaml  secret.yaml  service.yaml  serviceaccount.yaml
helm/controlplane/local/: values.yaml
mockserver/: deployment.yaml  requirements.txt
mockserver/server/: app.py  constants.py  helpers.py
src/agent/: conftest.py  constants.py  entrypoint.py  exceptions.py  helper.py  logging.py
src/agent/clients/: base.py  control_plane.py  token.py
src/agent/clients/tests/: test_base.py  test_control_plane.py  test_token.py
src/agent/core/: leader.py  lifecycle.py  manager.py  worker.py
src/agent/core/tests/: test_leader.py  test_lifecycle.py  test_manager.py  test_worker.py
src/agent/handlers/: event.py  execution.py  fault.py  resiliency.py  runner.py  snapshot.py  state.py  telemetry.py
src/agent/handlers/tests/: test_runner.py  test_snapshot.py  test_state.py  test_telemetry.py
src/agent/models/: agent.py  config.py  event.py  events.py  fault.py  heartbeat.py  state.py
src/agent/schemas/: config.py  event.py  heartbeat.py  resiliency.py  scenario.py  snapshot.py  state.py  suite.py  token.py
src/agent/schemas/tests/: test_config.py  test_misc.py
src/agent/tests/: conftest.py  test_constants.py  test_entrypoint.py  test_exceptions.py  test_helper.py  test_logging.py
src/agent/workers/: base.py  executor.py  fetcher.py  heartbeat.py  runner.py  scheduler.py  snapshot.py
src/agent/workers/tests/: test_heartbeat.py  test_runner.py  test_scheduler.py  test_snapshot.py
src/tests/: test_helper.py  test_logging.py  utils.py
