[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "fault-agent"
version = "0.1.0"
description = "resilty.io agent for validating Kubernetes resiliency through controlled fault injection."
authors = ["Swaroop Shubhakrishna Bhat <swaroopbhatk@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "agent", from = "." }]
keywords = [
    "resilience",
    "resiliency",
    "chaos-engineering",
    "kubernetes",
    "sre",
    "fault-injection",
    "reliability",
    "observability",
    "opentelemetry",
    "devops",
    "platform-engineering"
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
pydantic-settings = "^2.12.0"
aiohttp = "^3.13.2"
python-json-logger = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
fault-agent = "agent.entrypoint:run"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["agent"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.coverage.run]
source = ["agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.poetry.urls]
homepage = "https://github.com/resiltyio/fault-agent"
documentation = "https://github.com/resiltyio/fault-agent/tree/main/docs"
bug-tracker = "https://github.com/resiltyio/fault-agent/issues"
