[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "resilience-agent"
version = "1.0.0"
description = "resilopshq.com agent for validating Kubernetes resiliency and SLA criteria."
authors = ["Swaroop Shubhakrishna Bhat <swaroopbhatk@gmail.com>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "agent", from = "src" }]
keywords = [
    "resilience",
    "resiliency",
    "resiliency-posture",
    "kubernetes",
    "sre",
    "reliability",
    "observability",
    "opentelemetry",
    "devops",
    "platform-engineering"
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
pydantic-settings = "^2.12.0"
python-json-logger = "^4.0.0"
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
cachetools = "^7.0.5"
cachetools-async = "^0.0.5"
resilience-lib = {git = "https://github.com/resilops/resilience-lib.git", rev = "v1.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"

[tool.poetry.scripts]
resilience-agent = "agent.entrypoint:run"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["agent"]
combine_as_imports = true
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "B"]

[tool.coverage.run]
source = ["agent"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.poetry.urls]
homepage = "https://github.com/resilops/resilience-agent"
documentation = "https://github.com/resilops/resilience-agent/tree/main/docs"
bug-tracker = "https://github.com/resilops/resilience-agent/issues"
